Alterando o backgroundColor dos itens da lista

--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
           </form>
         </ul>
       </div>
+
+      <footer id="footer">
+        <p>
+          <!-- Drag and drop to reorder list -->
+          <p> &copy; Developed by Italo Hortiz</p>
+        </p>
+      </footer> <!--End of tag footer-->
     </main> <!-- End of tag main-->
 
-    <footer id="footer">
-      <p>
-        Drag and drop to reorder list
-      </p>
-    </footer> <!--End of tag footer-->
+    
 
   </div>
 
